--- a/movimientos/templates/inventario.html
+++ b/movimientos/templates/inventario.html
@@ -102,6 +102,28 @@
 
             <h5>
                 <b>
+                    <font color="#9B870C">AMARILLAS NO DISPONIBLES = {{amarillasnoDisponibles}}</font>
+                </b>
+            </h5>
+
+            <br>
+
+            <h5>
+                <b>
+                    <font color="#572364">MORADAS NO DISPONIBLES = {{moradasnoDisponibles}}</font>
+                </b>
+            </h5>
+
+            <br>
+            <h5>
+                <b>
+                    <font color="#4B4B4B">PLOMO NO DISPONIBLES = {{plomonoDisponibles}}</font>
+                </b>
+            </h5>
+            <br>
+
+            <h5>
+                <b>
                     <font color="red">NO DISPONIBLES - TOTAL = {{cantidadnoDispo}}</font>
                 </b>
             </h5>
