--- a/ordenes/templates/ordenes.html
+++ b/ordenes/templates/ordenes.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+{% extends 'base.html' %}
+{% block content %}
+{% load static %}
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   
@@ -11,8 +15,7 @@
 
 
 </head>
-{% extends 'base.html' %}
-{% block content %}
+
 <style>
 	@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
   
