--- a/ordenes/templates/ordenes.html
+++ b/ordenes/templates/ordenes.html
@@ -182,6 +182,10 @@ box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
         </div>
       
     </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
     
     
 	</body>
