--- a/movimientos/templates/ordenesCerradas.html
+++ b/movimientos/templates/ordenesCerradas.html
@@ -99,6 +99,7 @@
                         <td><a href='/generaPDFprint/{{c.id}}' target="_blank" class="btn btn-primary">Etiqueta</a></td>
                         <td><a href='/entradatotal/{{c.id_salida}}/{{c.id}}' title="" 
                             class="btn btn-danger">Devolución Total</a></td>
+                        <td><a href='/cargarrxevento/{{c.id_salida}}' class="btn btn-success" onclick="return confirm('¿Estás seguro?');">Ent-Rec Radios</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
