--- a/movimientos/templates/controlrxeventos.html
+++ b/movimientos/templates/controlrxeventos.html
@@ -340,6 +340,11 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row" style="margin-top: 10px;">
+                            <h5>
+                                <li>Total Radios por Recoger: {{total_entregado}}</li>
+                            </h5>
+                        </div>
                     </form>
                 </div>
             </div>
