detalle_orden_procesada

--- a/movimientos/templates/ordenesProcesadas.html
+++ b/movimientos/templates/ordenesProcesadas.html
@@ -102,6 +102,7 @@
                         <td><a href='/generaPDFGuia/{{c.id}}' target="_blank" class="btn btn-success">Guia</a></td>
                         <td><a href='/anularorden/{{c.id}}' title="" onclick="return confirm('¿Estás seguro de que quieres anular esta orden? Esta acción no se puede deshacer.');"
                             class="btn btn-danger">Anular</a></td>
+                        <td><a href='/guiadevueltos/{{c.id}}' class="btn btn-success">Ver Detalle</a></td> 
 
                         
 
