--- a/movimientos/templates/listadocxcpagado.html
+++ b/movimientos/templates/listadocxcpagado.html
@@ -178,7 +178,10 @@
                                         Cliente
                                     </th>
                                     <th>
-                                        RUC
+                                        Razón Social
+                                    </th>
+                                    <th>
+                                        RUC R.S.
                                     </th>
                                     <th>
                                         Monto Factura
@@ -203,7 +206,8 @@
                                 <tr>
                                     <td>{{c.id_salida}}</td>
                                     <td>{{c.cliente}}</td>
-                                    <td>{{ c.ruc|default:"" }}</td>
+                                    <td>{{c.razon_social|default:""}}</td>
+                                    <td>{{c.ruc_razon_social|default:""}}</td>
                                     <td style="font-weight: bold;">S/ {{c.monto_total}}</td>
                                     <td style="font-weight: bold;">S/ {{c.saldo}}</td>
                                     <td>{{c.fecha_pago|date}}</td>
