--- a/movimientos/templates/listadocxc.html
+++ b/movimientos/templates/listadocxc.html
@@ -213,11 +213,11 @@
                                             title="Editar Razón Social"></a>
                                         <!-- <input type="checkbox" id="facturado" name="facturado" {% if c.facturado %}checked{% endif %} disabled> -->
                                         {% if not c.facturado %}
-                                        <a id="sunat_{{c.id_orden}}" href='/formregistrafactura/{{c.id_orden}}/{{c.cliente}}/{{c.ruc}}/{{c.id_salida}}'
+                                        <a id="sunat_{{c.id_orden}}" href='/formregistrafactura/{{c.id_orden}}/{{c.cliente}}/{{c.ruc_razon_social}}/{{c.id_salida}}'
                                             class="btn btn-success"
                                             style="background: url(/static/subir_factura.png); background-size: cover; width: 30px; height: 30px;"
                                             title="Agregar Factura"></a>
-                                        <a id="no_sunat_{{c.id_orden}}" href='/formregistrafacturanosunat/{{c.id_orden}}/{{c.cliente}}/{{c.ruc}}/{{c.id_salida}}'
+                                        <a id="no_sunat_{{c.id_orden}}" href='/formregistrafacturanosunat/{{c.id_orden}}/{{c.cliente}}/{{c.ruc_razon_social}}/{{c.id_salida}}'
                                             class="btn btn-success"
                                             style="background: url(/static/no_sunat.png); background-size: cover; width: 30px; height: 30px;"
                                             title="Agregar Factura"></a>
