--- a/movimientos/templates/editpedidofactura.html
+++ b/movimientos/templates/editpedidofactura.html
@@ -205,7 +205,7 @@
                 <div class="text-center">
                     <button type="submit" class="btn btn-success"
                         style="border-radius: 5px; border: none; cursor: pointer;">
-                        Guardar Responsable
+                        Guardar 
                     </button>
                 </div>
 
