--- a/movimientos/templates/formsubirfact.html
+++ b/movimientos/templates/formsubirfact.html
@@ -140,16 +140,16 @@
                     <h3 class="text-start mb-0">CLIENTE: {{cliente}}</h3>
                 </div>
                 <div class="col-md-6">
-                    <h3>N° DE ORDEN: {{id}}</h3>
+                    <h3 class="text-start mb-0">N° DE ORDEN: {{id}}</h3>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-6">
-                    <h3 class="text-start mb-0">RUC: {{ruc}}</h3>
+                    <h3 class="text-start mb-0">{{razon_social}}</h3>
                 </div>
                 <div class="col-md-6">
-                    <h3>N° DE SALIDA: {{id_salida}}</h3>
+                    <h3 class="text-start mb-0">RUC: {{ruc}}</h3>
                 </div>
             </div>
         </div>
