--- a/movimientos/templates/formsubirfactNosunat.html
+++ b/movimientos/templates/formsubirfactNosunat.html
@@ -146,10 +146,10 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <h3 class="text-start mb-0">{{razon_social}}</h3>
+                    <h3 class="text-start mb-0">{{razon_social|default:""}}</h3>
                 </div>
                 <div class="col-md-6">
-                    <h3 class="text-start mb-0">RUC: {{ruc}}</h3>
+                    <h3 class="text-start mb-0">RUC: {{ruc|default:""}}</h3>
                 </div>
             </div>
         </div>
