--- a/ordenes/templates/ordenes.html
+++ b/ordenes/templates/ordenes.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-{% extends 'base.html' %}
+  {% extends 'base.html' %}
 {% block content %}
 {% load static %}
 
@@ -17,67 +16,117 @@
 </head>
 
 <style>
-	@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&display=swap');
-  
-  input {
-  caret-color: red;
+
+  body{
+      font-weight: bold;
   }
-  
-  .inputs {
-  text-align: left;
-  margin-top: 30px;
-  }
-  
-  label, input, button, textarea {
-	float:left;
-    margin:10px;
-  }
-  
-  label {
-  margin-bottom: 4px;
-  }
-  
-  label:nth-of-type(2) {
-  margin-top: 12px;
-  }
-  
-  input::placeholder {
-  color: gray;
-  }
-  
-  input {
-background: #ecf0f3;
-padding: 10px;
-padding-left: 20px;
-height: 50px;
-font-size: 14px;
-border-radius: 10px;
-box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
-}
-  
-  
-  button {
-  color: white;
-  margin-top: 20px;
-  background: #0047ab;
-  height: 40px;
-  border-radius: 1px;
-  cursor: pointer;
-  font-weight: 900;
-  box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px #7ed957;
-  transition: 0.5s;
+  table {
+      border-collapse: collapse;
+      width: 100%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      /* Agregar una sombra a la tabla */
+
   }
 
-  .campo-label {
-      color: #0047ab; /* Cambia el color al que desees, por ejemplo, azul eléctrico */
+  tr {
+      padding: 8px;
+      text-align: center;
+      border: 3px solid #7ed957;
+      /* Agregar bordes a las celdas */
+  }
+
+  .centrar {
+      text-align: center;
+  }
+
+  th {
+      color: #0047ab;
+      padding: 8px;
+      text-align: center;
+      border: 3px solid #7ed957;
+      /* Agregar bordes a las celdas */
+      background-color: white;
+  }
+
+  h1 {
+      color: #0047ab;
+      font-size: 36px;
+      /* Tamaño de fuente */
+      text-align: center;
+      /* Alineación del texto */
+      text-transform: uppercase;
+      /* Transformación a mayúsculas */
+      letter-spacing: 2px;
+      /* Espaciado entre letras */
       font-weight: bold;
-    }
-  
-  
-  </style>
+      /* Negrita */
+      text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+      /* Sombra de texto */
+  }
+
+  h3 {
+      color: #0047ab;
+      font-size: 18px;
+      /* Tamaño de fuente */
+      text-align: center;
+      /* Alineación del texto */
+      text-transform: uppercase;
+      /* Transformación a mayúsculas */
+      letter-spacing: 2px;
+      /* Espaciado entre letras */
+      font-weight: bold;
+      /* Negrita */
+      text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+      /* Sombra de texto */
+  }
+
+  .container {
+      position: relative;
+      width: 100%;
+      max-width: 1000px;
+      height: auto;
+      border-radius: 20px;
+      padding: 20px;
+      box-sizing: border-box;
+      background: white;
+  }
+  .campo-label{
+    color: #0047ab;
+  }
+
+  /* Pantallas medianas (tablets, pantallas de 1200px o menos) */
+  @media (max-width: 1200px) {
+      .container {
+          max-width: 1000px;
+          /* Ancho más adecuado para pantallas medianas */
+          padding: 15px;
+          /* Ajuste de padding */
+      }
+  }
+
+  /* Pantallas pequeñas (tablets verticales, smartphones grandes) */
+  @media (max-width: 768px) {
+      .container {
+          max-width: 100%;
+          /* Ancho completo para pantallas pequeñas */
+          padding: 10px;
+          /* Relleno más pequeño */
+      }
+  }
+
+  /* Pantallas muy pequeñas (smartphones pequeños) */
+  @media (max-width: 480px) {
+      .container {
+          padding: 5px;
+          /* Relleno aún menor */
+          border-radius: 10px;
+          /* Bordes menos redondeados para espacio adicional */
+      }
+  }
+</style>
 
 <body>
-	<h1>Nuevo Pedido</h1>
+	
 	{{error}}
 {% load crispy_forms_tags %}
 	<body>
@@ -91,102 +140,111 @@ box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
 				</button>
 			</form> -->
 		<!-- </div> -->
-
+    <div class="container mt-4">
+      <div class="row mb-4">
+        <div class="table-responsive py-2">
+            <div class="centrar">
+                <img src="{% static 'logo.png' %}" width="50" height="50" style="margin-bottom: 5px;">
+                <h1
+                        style="border: 2px solid #7ed957; padding: 8px; border-radius: 8px; background-color: #c7e0bb;">REGISTRAR PEDIDO</h1>
+            </div>
+        </div>
+    </div>
     <form method="post">
       {% csrf_token %}
       <div class="form-row">
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-6">
           <label class="campo-label">{{ form_orden.cliente.label_tag }}</label>
           {{ form_orden.cliente }}
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-6">
           <label class="campo-label">{{ form_orden.razon_Social.label_tag }}</label>
           {{ form_orden.razon_Social }}
         </div>
       </div>
       <div class="form-row">
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
           <label class="campo-label">{{ form_orden.fecha_entrega.label_tag }}</label>
           {{ form_orden.fecha_entrega }}
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
           <label class="campo-label">{{ form_orden.fecha_evento_desde.label_tag }}</label>
           {{ form_orden.fecha_evento_desde }}
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
           <label class="campo-label">{{ form_orden.fecha_evento_hasta.label_tag }}</label>
           {{ form_orden.fecha_evento_hasta }}
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
           <label class="campo-label">{{ form_orden.fecha_retiro.label_tag }}</label>
           {{ form_orden.fecha_retiro }}
         </div>
       </div>
       <div class="form-row">
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_radios.label_tag }}</label>
             {{ form_orden.cantidad_radios }}
           </div>
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_cobras.label_tag }}</label>
             {{ form_orden.cantidad_cobras }}
           </div>
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_manos_libres.label_tag }}</label>
             {{ form_orden.cantidad_manos_libres }}
           </div>
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_estaciones.label_tag }}</label>
             {{ form_orden.cantidad_estaciones }}
           </div>
-          <div class="form-group col-md-1">
+      </div>
+      <div class="form-row" style="margin-top: 0px;">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_cascos.label_tag }}</label>
             {{ form_orden.cantidad_cascos }}
           </div>
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_baterias.label_tag }}</label>
             {{ form_orden.cantidad_baterias }}
           </div>
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_cargadores.label_tag }}</label>
             {{ form_orden.cantidad_cargadores }}
           </div>
-          <div class="form-group col-md-1">
+          <div class="form-group col-md-3">
             <label class="campo-label">{{ form_orden.cantidad_repetidoras.label_tag }}</label>
             {{ form_orden.cantidad_repetidoras }}
           </div>
         </div>
         <div class="form-row">
-          <div class="form-group col-md-4">
+          
+          
+        </div>
+        <div class="form-row">
+          <div class="form-group col-md-6">
             <label class="campo-label">{{ form_orden.observaciones.label_tag }}</label>
             {{ form_orden.observaciones }}
           </div>
-          <div class="form-group col-md-4">
+          <div class="form-group col-md-6">
             <label class="campo-label">{{ form_orden.direccion_entrega.label_tag }}</label>
             {{ form_orden.direccion_entrega }}
           </div>
         </div>
         <div class="form-row">
-          <div class="form-group col-md-4">
-
-          </div>
-          <div class="form-group col-md-4">
-            <button>
+          <div class="col-md-12">
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-success">
               Guardar Orden
             </button>
           </div>
-          <div class="form-group col-md-4">
-
-          </div>
-
+        </div>
         </div>
       
     </form>
-
+    </div>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
-    
     
 	</body>
 	{% endblock %}
