--- a/movimientos/templates/salidas.html
+++ b/movimientos/templates/salidas.html
@@ -14,95 +14,156 @@
 </head>
 <style>
     table {
-      border-collapse: collapse;
-      width: 100%;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Agregar una sombra a la tabla */
-      
+        border-collapse: collapse;
+        width: 100%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        /* Agregar una sombra a la tabla */
+
     }
-  
+
     tr {
-      padding: 8px;
-      text-align: center;
-      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
     }
+
     .centrar {
-    text-align: center;
-  }
-  th {
-        color: #0047ab;
-      padding: 8px;
-      text-align: center;
-      border: 3px solid #7ed957; /* Agregar bordes a las celdas */
-      background-color: white;
+        text-align: center;
     }
-   h1 {
-    color: #0047ab;
-    font-size: 36px; /* Tamaño de fuente */
-    text-align: center; /* Alineación del texto */
-    text-transform: uppercase; /* Transformación a mayúsculas */
-    letter-spacing: 2px; /* Espaciado entre letras */
-    font-weight: bold; /* Negrita */
-    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);/* Sombra de texto */
-   }
-  </style>
+
+    th {
+        color: #0047ab;
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
+        background-color: white;
+    }
+
+    h1 {
+        color: #0047ab;
+        font-size: 36px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
+    }
+
+    .container {
+        position: relative;
+        width: 100%;
+        max-width: 1400px;
+        height: auto;
+        border-radius: 20px;
+        padding: 20px;
+        box-sizing: border-box;
+        background: white;
+    }
+
+    /* Pantallas medianas (tablets, pantallas de 1200px o menos) */
+    @media (max-width: 1200px) {
+        .container {
+            max-width: 1000px;
+            /* Ancho más adecuado para pantallas medianas */
+            padding: 15px;
+            /* Ajuste de padding */
+        }
+    }
+
+    /* Pantallas pequeñas (tablets verticales, smartphones grandes) */
+    @media (max-width: 768px) {
+        .container {
+            max-width: 100%;
+            /* Ancho completo para pantallas pequeñas */
+            padding: 10px;
+            /* Relleno más pequeño */
+        }
+    }
+
+    /* Pantallas muy pequeñas (smartphones pequeños) */
+    @media (max-width: 480px) {
+        .container {
+            padding: 5px;
+            /* Relleno aún menor */
+            border-radius: 10px;
+            /* Bordes menos redondeados para espacio adicional */
+        }
+    }
+</style>
+
 <body>
 
     <div class="row">
 
-        <div class="table-responsive py-2">
-            
-            <div class="centrar">
-                <img src="{% static 'logo.png' %}" width="50" height="50">
-                <h1>Listado de Pedidos</h1>
+
+
+        <div class="centrar">
+            <img src="{% static 'logo.png' %}" width="50" height="50">
+            <h1>Listado de Pedidos</h1>
+        </div>
+
+        <div class="container mt-4">
+            <div class="table-responsive py-2">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>
+                                ID
+                            </th>
+                            <th>
+                                Cliente
+                            </th>
+                            <th>
+                                Creada el:
+                            </th>
+                            <th>
+                                Entregar el:
+                            </th>
+                            <th>
+                                Evento desde:
+                            </th>
+                            <th>
+                                Evento hasta:
+                            </th>
+                            <th>
+                                Observaciones:
+                            </th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        {% for c in listaOrdenes %}
+                        {% if c.fecha_entrega <= fecha_tope %} <tr style="background-color:  #FFA500">
+                            {% endif %}
+                            <td>{{c.id}}</td>
+                            <td>{{c.cliente}}</td>
+                            <td>{{c.fecha_creacion}}</td>
+                            <td>{{c.fecha_entrega}}</td>
+                            <td>{{c.fecha_evento_desde}}</td>
+                            <td>{{c.fecha_evento_hasta|default:""}}</td>
+                            <td>{{c.observaciones}}</td>
+                            <td><a href='/detalleOrden/{{c.id}}' class="btn btn-success"
+                                style="background: url(/static/procesar_orden.png); background-size: cover; width: 50px; height: 50px;"
+                                title="Procesar"></a></td>
+                            <td><a href='/editarOrden/{{c.id}}' class="btn btn-warning"
+                                    style="background: url(/static/editar_orden.png); background-size: cover; width: 50px; height: 50px;"
+                                    title="Editar Pedido"></a></td>
+                            <td><a href='/generarPDF/{{c.id}}' target="_blank" class="btn btn-primary"
+                                        style="background: url(/static/imprimir_etiqueta.png); background-size: cover; width: 50px; height: 50px;"
+                                        title="Generar Etiqueta"></a></td>
+                            </tr>
+                            {% endfor %}
+                    </tbody>
+                </table>
             </div>
-            
-
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            ID
-                        </th>
-                        <th>
-                            Cliente
-                        </th>
-                        <th>
-                            Creada el:
-                        </th>
-                        <th>
-                            Entregar el:
-                        </th>
-                        <th>
-                            Evento desde:
-                        </th>
-                        <th>
-                            Evento hasta:
-                        </th>
-                        <th>
-                            Observaciones:
-                        </th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    {% for c in listaOrdenes %}
-                    {% if c.fecha_entrega <= fecha_tope %}
-                    <tr style="background-color:  #FFA500">
-                    {% endif %}
-                        <td>{{c.id}}</td>
-                        <td>{{c.cliente}}</td>
-                        <td>{{c.fecha_creacion}}</td>
-                        <td>{{c.fecha_entrega}}</td>
-                        <td>{{c.fecha_evento_desde}}</td>
-                        <td>{{c.fecha_evento_hasta|default:""}}</td>
-                        <td>{{c.observaciones}}</td>
-                        <td><a href='/detalleOrden/{{c.id}}' class="btn btn-success">Ver Detalle y Procesar</a></td>
-                        <td><a href='/editarOrden/{{c.id}}' class="btn btn-warning">Editar Pedido</a></td>
-                        <td><a href='/generarPDF/{{c.id}}' target="_blank" class="btn btn-primary">Generar Etiqueta</a></td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -110,4 +171,5 @@
         crossorigin="anonymous"></script>
 </body>
 {% endblock %}
+
 </html>
