--- a/movimientos/templates/salidas.html
+++ b/movimientos/templates/salidas.html
@@ -152,7 +152,7 @@
                             <td>{{c.observaciones}}</td>
                             <td><a href='/detalleOrden/{{c.id}}' class="btn btn-success"
                                     style="background: url(/static/procesar_orden.png); background-size: cover; width: 50px; height: 50px;"
-                                    title="Procesar"></a></td>
+                                    title="Procesar - Total Radios:{{ c.cantidad_radios }}"></a></td>
                             <td><a href='/editarOrden/{{c.id}}' class="btn btn-warning"
                                     style="background: url(/static/editar_orden.png); background-size: cover; width: 50px; height: 50px;"
                                     title="Editar Pedido"></a></td>
