--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -22,6 +22,7 @@
           <li><a class="dropdown-item" href='/ordenesProcesadas/'>Pedidos Preparados</a></li>
           <li><a class="dropdown-item" href='/ordenesCerradas/'>Pedidos Entregados</a></li>
           <li><a class="dropdown-item" href='/ordenesDevueltas/'>Pedidos Devueltos</a></li>
+          <li><a class="dropdown-item" href='/inventario/'>Realizar Inventario</a></li>
         </ul>
         </div>
         <a class="nav-item nav-link" href='/verFaltante/'>Faltantes</a>
