--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -26,7 +26,7 @@
         </ul>
         </div>
         <a class="nav-item nav-link" href='/verFaltante/'>Faltantes</a>
-        <a class="nav-item nav-link" href='/inventario/'>Inventario</a>
+        <a class="nav-item nav-link" href='/consultainventario/'>Inventario</a>
         <a class="nav-item nav-link" href='/informe/'>Informes</a>
         <a class="nav-item nav-link" href='/auditoria/'>Auditoría</a>
 
