--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -30,7 +30,7 @@
         <a class="nav-item nav-link" href='/informe/'>Informes</a>
         <a class="nav-item nav-link" href='/auditoria/'>Auditoría</a>
 
-        {% if user.username in  'lmeneses, maria2018, lcastillo','fmeneses' %}
+        {% if user.username in  'lmeneses, maria2018, lcastillo, fmeneses' %}
         <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="facturasBancoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Facturación
