--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -23,6 +23,9 @@
           <li><a class="dropdown-item" href='/ordenesCerradas/'>Pedidos Entregados</a></li>
           <li><a class="dropdown-item" href='/ordenesDevueltas/'>Pedidos Devueltos</a></li>
           <li><a class="dropdown-item" href='/inventario/'>Realizar Inventario</a></li>
+          <li><a class="dropdown-item" href='/inventarioacce/'>Inventario Accesorios</a></li>
+          <li><a class="dropdown-item" href='/entradaaccesorios/'>Entrada de Accesorios</a></li>
+          <li><a class="dropdown-item" href='/consultaaccesorios/'>Consulta Inventario de Accesorios</a></li>
         </ul>
         </div>
         <a class="nav-item nav-link" href='/verFaltante/'>Faltantes</a>
