oculta_campos_entrada

--- a/movimientos/templates/entradas.html
+++ b/movimientos/templates/entradas.html
@@ -57,34 +57,34 @@
                     
                     <tr>
                         <td>
-                            {{listado_orden.cantidad_radios}}
+                            <!-- {{listado_orden.cantidad_radios}} -->
                         </td>
                         <td>
-                            {{listado_entrada.cobras}} 
+                            <!-- {{listado_entrada.cobras}}  -->
                             
                         </td>
                         <td>
-                            {{listado_entrada.handsfree}} 
+                            <!-- {{listado_entrada.handsfree}}  -->
                             
                         </td>
                         <td>
-                            {{listado_entrada.estaciones}} 
+                            <!-- {{listado_entrada.estaciones}}  -->
                             
                         </td>
                         <td>
-                            {{listado_entrada.cascos}} 
+                            <!-- {{listado_entrada.cascos}}  -->
                             
                         </td>
                         <td>
-                            {{listado_entrada.baterias}}    
+                            <!-- {{listado_entrada.baterias}}     -->
                             
                         </td>
                         <td>
-                            {{listado_entrada.cargadores}} 
+                            <!-- {{listado_entrada.cargadores}}  -->
                             
                         </td> 
                         <td>
-                            {{listado_entrada.repetidoras}} 
+                            <!-- {{listado_entrada.repetidoras}}  -->
                             
                         </td>
                         
