--- a/movimientos/templates/ordenesProcesadas.html
+++ b/movimientos/templates/ordenesProcesadas.html
@@ -158,13 +158,33 @@
                             </td>
                             </font>
                             <td>{{c.observaciones}} {{cantidadRadios}}</td>
+                            <td><a href='cambiaEstadoEnt/{{c.id}}' class="btn btn-success"
+                                style="background: url(/static/entregado.png); background-size: cover; width: 50px; height: 50px;"
+                                title="Entregar" onclick="return confirm('¿Estás seguro?');"></a></a>
+                            </td>
+                                
+                            <td><a href='/generaPDFGuia/{{c.id}}' class="btn btn-success"
+                                style="background: url(/static/guia.png); background-size: cover; width: 50px; height: 50px;"
+                                title="Imprimir Guia"></a>
+                               
+                            </td>
+                            <td><a href='/anularorden/{{c.id}}' class="btn btn-success"
+                                style="background: url(/static/anular.png); background-size: cover; width: 50px; height: 50px;"
+                                title="Anular" onclick="return confirm('¿Estás seguro de que quieres anular esta orden? Esta acción no se puede deshacer.');"></a>
+                                
+                                </td>
+                            <td><a href='/guiadevueltos/{{c.id}}' class="btn btn-success"
+                                style="background: url(/static/ver_detalle.png); background-size: cover; width: 50px; height: 50px;"
+                                title="Ver detalle"></a>
+                                
+                            </td>
                             <!-- <td><a href='/detalleOrden/{{c.id}}' class="btn btn-success">Detall</a></td> -->
-                            <td><a href='/cambiaEstadoEnt/{{c.id}}' class="btn btn-warning">Entregado</a></td>
+                            <!-- <td><a href='/cambiaEstadoEnt/{{c.id}}' class="btn btn-warning">Entregado</a></td>
                             <td><a href='/generaPDFGuia/{{c.id}}' target="_blank" class="btn btn-success">Guia</a></td>
                             <td><a href='/anularorden/{{c.id}}' title=""
                                     onclick="return confirm('¿Estás seguro de que quieres anular esta orden? Esta acción no se puede deshacer.');"
                                     class="btn btn-danger">Anular</a></td>
-                            <td><a href='/guiadevueltos/{{c.id}}' class="btn btn-success">Ver Detalle</a></td>
+                            <td><a href='/guiadevueltos/{{c.id}}' class="btn btn-success">Ver Detalle</a></td> -->
 
 
 
