--- a/movimientos/templates/ordenesProcesadas.html
+++ b/movimientos/templates/ordenesProcesadas.html
@@ -158,7 +158,7 @@
                             </td>
                             </font>
                             <td>{{c.observaciones}} {{cantidadRadios}}</td>
-                            <td><a href='cambiaEstadoEnt/{{c.id}}' class="btn btn-success"
+                            <td><a href='/cambiaEstadoEnt/{{c.id}}' class="btn btn-success"
                                 style="background: url(/static/entregado.png); background-size: cover; width: 50px; height: 50px;"
                                 title="Entregar" onclick="return confirm('¿Estás seguro?');"></a></a>
                             </td>
