--- a/movimientos/templates/listadocxcfacturadoabono.html
+++ b/movimientos/templates/listadocxcfacturadoabono.html
@@ -231,7 +231,7 @@
                                         <a href='/detalleabonos/{{c.id_orden}}' class="btn btn-success"
                                             style="background: url(/static/detalle_abono.png); background-size: cover; width: 30px; height: 30px;"
                                             title="Detalle Abonos"></a>
-                                        <a href='/formregistrarpago/{{c.id_orden}}/{{c.cliente}}/{{c.ruc}}/{{c.id_salida}}'
+                                        <a href='/formregistrarpago/{{c.id_orden}}/{{c.cliente}}/{{c.ruc_razon_social}}/{{c.id_salida}}/{{c.razon_social}}'
                                             class="btn btn-warning"
                                             style="background: url(/static/pago.png); background-size: cover; width: 30px; height: 30px;"
                                             title="Registrar Pago"></a>
