--- a/movimientos/templates/kardex.html
+++ b/movimientos/templates/kardex.html
@@ -226,10 +226,13 @@
                                         Ult. Inventario
                                     </th>
                                     <th>
-                                        Salidas
+                                        Entradas(compras)
                                     </th>
                                     <th>
                                         Entradas
+                                    </th>
+                                    <th>
+                                        Salidas
                                     </th>
                                     <th>
                                         Existencia actual
@@ -241,7 +244,17 @@
                             </thead>
 
                             <tbody>
-                                
+                                {% for c in datos %}
+                                <tr>
+                                    <td>c.id_item</td>
+                                    <td>c.descripcion</td>
+                                    <td>c.ult_actualizacion</td>
+                                    <td>c.id_entrada_merc</td>
+                                    <td>c.entradas</td>
+                                    <td>c.salidas</td>
+                                    <td>c.existencia_actual</td>
+                                    <td>c.dif</td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
