--- a/movimientos/templates/kardex.html
+++ b/movimientos/templates/kardex.html
@@ -255,6 +255,7 @@
                                     <td>c.existencia_actual</td>
                                     <td>c.dif</td>
                                 </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
