--- a/movimientos/templates/kardex.html
+++ b/movimientos/templates/kardex.html
@@ -246,14 +246,14 @@
                             <tbody>
                                 {% for c in datos %}
                                 <tr>
-                                    <td>c.id_item</td>
-                                    <td>c.descripcion</td>
-                                    <td>c.ult_actualizacion</td>
-                                    <td>c.id_entrada_merc</td>
-                                    <td>c.entradas</td>
-                                    <td>c.salidas</td>
-                                    <td>c.existencia_actual</td>
-                                    <td>c.dif</td>
+                                    <td>{{c.id_item}}</td>
+                                    <td>{{c.descripcion}}</td>
+                                    <td>{{c.ult_actualizacion}}</td>
+                                    <td>{{c.id_entrada_merc}}</td>
+                                    <td>{{c.entradas}}</td>
+                                    <td>{{c.salidas}}</td>
+                                    <td>{{c.existencia_actual}}</td>
+                                    <td>{{c.dif}}</td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
