--- a/movimientos/templates/inventario.html
+++ b/movimientos/templates/inventario.html
@@ -114,7 +114,7 @@
                         <p>Nombre del cliente: {{cliente}}</p>
                     </div>
                     <div class="form-group col-md-4 col-lg-4 col-xl-4">
-                        <a href='/#formregistrarpago/{{c.id_orden}}/{{c.cliente}}/{{c.ruc_razon_social}}/{{c.id_salida}}/{{c.razon_social}}'
+                        <a href='/exportarrx/'
                                             class="btn btn-warning"
                                             style="background: url(/static/excel.png); background-size: cover; width: 100px; height: 100px;"
                                             title="Exportar a Excel"></a>
