--- a/movimientos/templates/faltantes.html
+++ b/movimientos/templates/faltantes.html
@@ -145,7 +145,7 @@
                         <td>{{d.cod_salida}}</td>
                         <td>{{d.nombre}}</td>
                         <td>{{d.n_serial}}</td>
-                        <td><a href='/entradasrxfaltante/{{d.cod_salida}}' class="btn btn-success">Recibir</a></td>
+                        <td><a href='/entradasrxfaltante/{{d.cod_salida}}/{{d.n_serial}}' class="btn btn-success">Recibir</a></td>
                         
                     </tr>
                     {% endfor %}     
