--- a/movimientos/templates/faltantes.html
+++ b/movimientos/templates/faltantes.html
@@ -109,7 +109,7 @@
                         <td>{{c.cargadores}}</td>
                         <td>{{c.repetidoras}}</td>
                         
-                        <td><a href='/entradas/{{c.cod_salida}}' class="btn btn-success">Recibir</a></td>
+                        <td><a href='/entradasaccefaltante/{{c.cod_salida}}' class="btn btn-success">Recibir</a></td>
                     </tr>
                     {% endfor %}     
                    
