numero_rx_entradas

--- a/movimientos/templates/entradas.html
+++ b/movimientos/templates/entradas.html
@@ -118,7 +118,7 @@
                 </button>
             </form>
             <br>
-            
+            <h1> Radios Cargadas: {{cantidad_rx}}</h1>
             
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
