--- a/movimientos/templates/controlrxeventos.html
+++ b/movimientos/templates/controlrxeventos.html
@@ -432,7 +432,7 @@
                         </div>
 
                     </div>
-                    <div class="tab-pane fade show active" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
+                    <div class="tab-pane fade show" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
                         <h4>TOTAL RECOGIDAS: {{total_recogido}}</h4>
                         <div
                             style="border: 2px solid #7ed957; padding: 15px; width: 400px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
