--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -27,6 +27,7 @@
           <li><a class="dropdown-item" href='/entradaaccesorios/'>Entrada de Accesorios</a></li>
           <li><a class="dropdown-item" href='/consultaaccesorios/'>Consulta Inventario de Accesorios</a></li>
           <li><a class="dropdown-item" href='/kardex/'>Kardex</a></li>
+          <li><a class="dropdown-item" href='/recordatorio/'>Enviar Recordatorios</a></li>
         </ul>
         </div>
         <a class="nav-item nav-link" href='/verFaltante/'>Faltantes</a>
