--- a/movimientos/templates/informes.html
+++ b/movimientos/templates/informes.html
@@ -118,6 +118,7 @@
                 <select id="years" name="years">
                     <option value="2023">2023</option>
                     <option value="2024">2024</option>
+                    <option value="2025">2025</option>
                 </select>
             <br>
             
@@ -141,6 +142,7 @@
                 <select id="years" name="years">
                     <option value="2023">2023</option>
                     <option value="2024">2024</option>
+                    <option value="2025">2025</option>
                 </select>
             <br>
             
