--- a/movimientos/templates/controlrxeventos.html
+++ b/movimientos/templates/controlrxeventos.html
@@ -325,7 +325,7 @@
 
             <div class="tab-pane fade " id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
                 <!-- Contenido del Tab 2 -->
-                <h3>RECOJER RADIOS</h3>
+                <h3>RECOGER RADIOS</h3>
                 <div
                     style="border: 2px solid #7ed957; padding: 15px; border-radius: 8px; max-width: 100%; margin: 0 auto; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
                     <!-- Contenido del Tab 1 -->
